recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:11: error: not found: value suntree
    suntree();
    ^